<resources>
    <string name="app_name">Final_Project</string>
    <string name="map">MAP</string>
    <string name="profile">PROFILE</string>
    <string name="task">TASK</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phoneNo">Phone No.</string>
    <string name="emptyusername">Username cannot be empty</string>
    <string name="emptypassword">Password cannot be empty</string>
    <string name="mismatch">The two password are mismatch</string>
    <string name="invalidemail">Invalid email</string>
    <string name="invalidphoneno">Invalid phone no.</string>
    <string name="networkerror">网络出错，请检查您的网络连接！</string>
    <string name="wrongusernameorpassword">Wrong username/password.</string>
    <string name="cancel">CANCEL</string>
    <string name="inputvalidinfo">Please input valid infomation.</string>
    <string name="invalidusername">Invalid username</string>
    <string name="emptyemail">Email cannot be empty</string>
    <string name="emptyphoneno">Phone no. cannot be empty.</string>
    <string name="new_task">New Task</string>
    <string name="task_title">Task Title</string>
    <string name="click_to_locate">Click to locate</string>
    <string name="task_content">Task Content</string>
    <string name="submit">SUBMIT</string>
    <string name="quit">QUIT</string>
    <string name="help">HELP</string>
    <string name="invalidicon">Icon is invalid, please upload again.</string>
    <string name="starting_point">Starting point</string>
    <string name="destination">Destination</string>
    <string name="emptytasktitle">Task title cannot be empty</string>
    <string name="emptystartlocation">Start location cannot be empty</string>
    <string name="emptycontent">Task content cannot be empty</string>
    <string name="accept_task_successfully">Successfully accepted the task</string>
</resources>
