<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_90" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/map_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            android:id="@+id/menu_icon_map"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_map_white_48pt_3x"/>

        <TextView
            android:id="@+id/menu_text_map"
            style="@style/TextView.GuillotineItem"
            android:text="@string/map" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/menu_icon_tasks"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_event_note_white_48pt_3x" />

        <TextView
            android:id="@+id/menu_text_tasks"
            style="@style/TextView.GuillotineItem"
            android:text="@string/task" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/menu_icon_advanced"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings_input_svideo_white_48pt_3x" />

        <TextView
            android:id="@+id/menu_text_advanced"
            style="@style/TextView.GuillotineItem"
            android:text="@string/profile" />
    </LinearLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/guillotine_divider_height" />-->

    <LinearLayout
        android:id="@+id/setting_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/menu_icon_settings"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings_white_48pt_3x" />

        <TextView
            android:id="@+id/menu_text_settings"
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>