<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signin_signup"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in"
        android:text="@string/signin"
        android:textSize="40sp"
        android:textColor="@color/selected_item_color"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signin_username_inputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signin_username_inputLayout"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/signin_password_inputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="invisible"
        app:errorEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signin_username_input"
            android:lines="1"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signin_password_inputLayout"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/signin_username_inputLayout"
        app:layout_constraintBottom_toTopOf="@+id/signin_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="invisible"
        app:errorEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/signin_password_input"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signin_btn"
        android:text="@string/signin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/signin_password_inputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signin_register_btn"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signin_register_btn"
        android:text="@string/register"
        app:layout_constraintTop_toTopOf="@id/signin_btn"
        app:layout_constraintLeft_toRightOf="@id/signin_btn"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up"
        android:text="@string/signup"
        android:textSize="40sp"
        android:textColor="@color/selected_item_color"
        app:layout_constraintBottom_toTopOf="@id/signup_username_inputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="5dp"/>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/signup_icon"
        android:background="@color/colorPrimary"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signup_password_inputLayout"
        app:layout_constraintRight_toRightOf="@+id/signup_password_inputLayout"
        android:layout_marginBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_username_inputLayout"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@id/signup_password_inputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/signup_icon"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp"
        app:errorEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_username_input"
            android:lines="1"
            android:singleLine="true"
            android:paddingTop="2dp"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password_inputLayout"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/signup_icon"
        app:layout_constraintBottom_toTopOf="@+id/signup_confirmPassword_inputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:errorEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_password_input"
            android:lines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:paddingTop="2dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_confirmPassword_inputLayout"
        android:hint="@string/confirmPassword"
        app:layout_constraintTop_toBottomOf="@id/signup_password_inputLayout"
        app:layout_constraintBottom_toTopOf="@+id/signup_phoneNo_inputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:errorEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_confirmPassword_input"
            android:lines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:paddingTop="2dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_phoneNo_inputLayout"
        android:hint="@string/phoneNo"
        app:layout_constraintTop_toBottomOf="@id/signup_confirmPassword_inputLayout"
        app:layout_constraintBottom_toTopOf="@+id/signup_email_inputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:errorEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_phoneNo_input"
            android:lines="1"
            android:singleLine="true"
            android:inputType="number"
            android:paddingTop="2dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email_inputLayout"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/signup_phoneNo_inputLayout"
        app:layout_constraintBottom_toTopOf="@+id/signup_register_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:errorEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_email_input"
            android:lines="1"
            android:singleLine="true"
            android:paddingTop="2dp"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_register_btn"
        android:text="@string/register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/signup_email_inputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signup_cancel_btn"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_cancel_btn"
        android:text="@string/cancel"
        app:layout_constraintTop_toTopOf="@id/signup_register_btn"
        app:layout_constraintLeft_toRightOf="@id/signup_register_btn"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signin_signup_progress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>